--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ keywords = [
     "ELT",
     "saasoptics",
 ]
-license = "Apache-2.0"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "<3.12,>=3.7.1"
